macros/tests/ui/multipart_nested_with_limit.stderr
error: `limit` has no effect on `nested` fields
  --> tests/ui/multipart_nested_with_limit.rs:11:5
   |
11 |     inner: Inner,
   |     ^^^^^
